Fix safari drop cap spacing

--- a/src/app.css
+++ b/src/app.css
@@ -17,7 +17,7 @@
 	--color-anchor-active: var(--color-red4);
 	--color-border: var(--color-gray2);
 	--color-read-more: var(--color-black);
-	--color-drop-cap: var(--color-gray1);
+	--color-drop-cap: var(--color-red2);
 
 	--font-size-small: 0.8rem;
 	--font-size-small2: 14px;
